home scrollbar styling and margin fixes

--- a/app/src/app.scss
+++ b/app/src/app.scss
@@ -1,6 +1,10 @@
 :root {
   --main-color: #0b0b0b;
 }
+body{
+  margin: 0;
+  padding: 0;
+}
 
 .link {
   color: inherit;
